--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <img id="phase-image" src="" alt="Enigma Image">
   <p id="response-text">Digite a resposta aqui:</p>
   <input type="text" id="answer-input">
-  <div id="answer-button-container"> <!-- Container para manter o botão e a imagem juntos -->
+  <div id="answer-button-container">
     <button id="answer-button">Responder</button>
     <img id="logo-image" src="imagens/logocjp.png" alt="Logo CJP">
   </div>
