--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
   <img src="imagens/introducao.png" alt="Introduction Image">
   <button id="start-button">Começar</button>
 </div>
-<div id="game-container">
+<div  id="game-container">
   <img id="phase-image" src="" alt="Enigma Image">
   <p id="response-text">Digite a resposta aqui:</p>
   <input type="text" id="answer-input">
   <div id="answer-button-container">
     <button id="answer-button">Responder</button>
     <img id="logo-image" src="imagens/logocjp.png" alt="Logo CJP">
+    <p id="congratulations-text"></p>
   </div>
 </div>
+<div id="conclusion-container">
+  <img id="conclusion-image" src="imagens/parabens.png" alt="Parabéns">
+</div>
+
 <script src="script.js"></script>
 </body>
 </html>
