--- a/index.html
+++ b/index.html
@@ -28,4 +28,4 @@
 <script src="script.js"></script>
 </body>
 </html>
-<link rel="icon" type="imagens/x-icon" href="favicon.ico">
+<link rel="icon" href="imagens/favicon.ico" type="image/x-icon">
